--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <h1 class="text-4xl font-extrabold leading-10 tracking-tight text-white sm:text-5xl sm:leading-none md:text-6xl xl:text-7xl"><span class="block">Simplify the way you</span> <span class="relative inline-block mt-3 text-transparent text-white">design websites</span></h1>
             <div class="max-w-lg mx-auto mt-6 text-sm text-center text-indigo-200 md:mt-12 sm:text-base md:max-w-xl md:text-lg xl:text-xl">If you are ready to change the way you design websites, then you'll want to use our block builder to make it fun and easy!</div>
-            <form action="https://online.us14.list-manage.com/subscribe/post?u=5dcf3add05950cd8596993328&amp;id=11fdd4c643" method="post" class="validate" target="_blank" novalidate>
+            <form action="https://online.us14.list-manage.com/subscribe/post?u=5dcf3add05950cd8596993328&amp;id=11fdd4c643" method="post" target="_blank" novalidate>
                 <div class="relative flex items-center max-w-md mx-auto mt-12 overflow-hidden text-center rounded-full">
                     <input type="text" name="email" placeholder="Email Address" class="w-full h-12 px-6 py-2 font-medium text-indigo-800 focus:outline-none">
                     <span class="relative top-0 right-0 block">
