--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <div class="max-w-lg mx-auto mt-6 text-sm text-center text-indigo-200 md:mt-12 sm:text-base md:max-w-xl md:text-lg xl:text-xl">If you are ready to change the way you design websites, then you'll want to use our block builder to make it fun and easy!</div>
             <form action="https://online.us14.list-manage.com/subscribe/post?u=5dcf3add05950cd8596993328&amp;id=11fdd4c643" method="post" target="_blank" novalidate>
                 <div class="relative flex items-center max-w-md mx-auto mt-12 overflow-hidden text-center rounded-full">
-                    <input type="text" name="email" placeholder="Email Address" class="w-full h-12 px-6 py-2 font-medium text-indigo-800 focus:outline-none">
+                    <input type="email" name="EMAIL" placeholder="Email Address" class="w-full h-12 px-6 py-2 font-medium text-indigo-800 focus:outline-none">
                     <span class="relative top-0 right-0 block">
-                        <input type="submit" value="Sign Up" class="inline-flex items-center w-32 h-12 px-8 text-base font-bold leading-6 text-white transition duration-150 ease-in-out bg-indigo-400 border border-transparent hover:bg-indigo-700 focus:outline-none active:bg-indigo-700">
+                        <input type="submit" value="Sign Up" name="subscribe" class="inline-flex items-center w-32 h-12 px-8 text-base font-bold leading-6 text-white transition duration-150 ease-in-out bg-indigo-400 border border-transparent hover:bg-indigo-700 focus:outline-none active:bg-indigo-700">
                     </span>
                 </div>
-            <form>
+            </form>
             <div class="mt-8 text-sm text-indigo-300">By signing up, you agree to our terms and services.</div>
         </div>
     </div>
