--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <a href="#_" class="w-1/4 py-4 pl-6 pr-4 md:pl-4 md:py-0">
                     <span class="p-1 text-xl font-black leading-none text-white select-none"><span>Build Bot</span><span class="text-indigo-300">.</span></span>
                 </a>
+                <div class="fixed top-0 left-0 z-40 items-center hidden w-full h-full p-3 text-xl bg-gray-900 bg-opacity-50 md:text-sm lg:text-base md:w-3/4 md:bg-transparent md:p-0 md:relative md:flex" :class="{'flex': showMenu, 'hidden': !showMenu }">
+                    <div class="flex-col w-full h-auto h-full overflow-hidden bg-white rounded-lg select-none md:bg-transparent md:rounded-none md:relative md:flex md:flex-row md:overflow-auto">
+                    </div>
+                </div>
             </div>
         </nav>
         <div class="container py-32 mx-auto text-center sm:px-4">
